multiple notes selector wip

--- a/index.html
+++ b/index.html
@@ -38,8 +38,11 @@
         </div>
 
         <!--  MULTIPLE NOTES -->
-        <label for="show-multiple-notes">Show multiple notes: </label>
-        <input type="checkbox" id="show-multiple-notes">
+    <!--    CREATE FUNCTION TO BE ABLE TO SELECT MULTIPLE NOTES -->
+        <!-- Eventually be able to select notes and possible chord name will be shown -->
+        <!-- <label for="show-multiple-notes">Show multiple notes: </label>
+        <input type="checkbox" id="show-multiple-notes"> -->
+
     </div>
 
     <!-- NOTE SECTION  -->
